--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/sflynn44/se3316-sflynn44-lab4#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2"
   }
 }
